--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <p class="test">scssテスト</p>
-</body>
+
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title></title>
+    <meta name="description" content="">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+  </head>
+
+    <h1><mark>WithCode</mark></h1>
+    <p>エンジニアコミュニティ <b>[WithCode]</b><br>
+    『人生をコードと共に』というビジョンを達成するべく、皆さんのプログラミングの学習をサポートします。</p>
+    <ol>
+      <li>WithCode会</li>
+      <li>模擬案件</li>
+      <li>質問対応</li>
+    </ol>
+
+  </body>
 </html>
